<resources>
    <string name="app_name">Proyecto_App_Futbol</string>
    <string name="tituloInicioSesion">Inicio Sesion</string>
    <string name="tituloMenuPrincipal">Menu Principal</string>
    <string name="tituloMenuLaLiga">La Liga</string>
    <string name="tituloMenuBundesliga">Bundesliga</string>
    <string name="tituloMenuPremier">Premier League</string>
    <string name="tituloMenuLigueOne">Ligue 1 Uber Eats</string>
    <string name="tituloClasificacion">Clasificacion</string>
    <string name="tituloEquipos">Equipos</string>
    <string name="clasi_fr">Clasificación</string>
    <string name="equipo_fr">Equipos</string>
    <string name="jugador_fr">Jugadores</string>
    <string name="partido_fr">Partido</string>
    <string name="buttPr_clasificacion">Clasificación</string>
    <string name="buttPr_eq">Equipos</string>
    <string name="buttPr_jug">Jugadores</string>
    <string name="buttPr_part">Partidos</string>
    <string name="buttLg_clasif">Clasificacion</string>
    <string name="buttLg_jug">Jugadores</string>
    <string name="buttLg_part">Partidos</string>
    <string name="buttPr_equp">Equipos</string>
    <string name="butBund_clasif">Clasificacion</string>
    <string name="butBund_equip">Equipos</string>
    <string name="butBund_juga">Jugadores</string>
    <string name="butBund_parti">Partidos</string>
    <string name="contraseNa">Contraseña:</string>
    <string name="entrar">ENTRAR</string>
    <string name="admin">ADMIN</string>
    <string name="email">Email:</string>
    <string name="ligaespanola">LigaEspañola</string>
    <string name="ligainglesa">LigaInglesa</string>
    <string name="ligafrancesa">LigaFrancesa</string>
    <string name="ligaalemana">LigaAlemana</string>
    <string name="pos">Pos</string>
    <string name="equipo">Equipo</string>
    <string name="pts">Pts</string>
    <string name="pj">PJ</string>
    <string name="pg">PG</string>
    <string name="pe">PE</string>
    <string name="pp">PP</string>
    <string name="gf">GF</string>
    <string name="gc">GC</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nacim">Nacim.</string>
    <string name="dorsal">Dorsal</string>
    <string name="nacion">Nacion.</string>
    <string name="posicion">Posición</string>
    <string name="jugadores">Jugadores</string>
    <string name="equipos">Equipos</string>
    <string name="ligas">Ligas</string>
    <string name="menu_administraci_n">MENU ADMINISTRACIÓN</string>
    <string name="jugadoresTitulo">JUGADORES</string>
    <string name="eliminar">Eliminar</string>
    <string name="a_adir">Añadir</string>
    <string name="modificar">Modificar</string>
    <string name="ligasTitulo">LIGAS</string>
    <string name="anadir_equipo">AÑADIR EQUIPO</string>
    <string name="nombreFormulario">Nombre:</string>
    <string name="estadio">Estadio:</string>
    <string name="puntuacion">Puntuación:</string>
    <string name="id_liga">ID Liga:</string>
    <string name="anadir_jugador_titulo">AÑADIR JUGADOR</string>
    <string name="id_equipo">ID Equipo:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="dorsal_formulario">Dorsal:</string>
    <string name="nacionalidad">Nacionalidad:</string>
    <string name="valor_mercado">Valor Mercado:</string>
    <string name="posicion_formulario">Posición:</string>
    <string name="anadir_liga">AÑADIR LIGA</string>
    <string name="pais">Pais:</string>
    <string name="eliminar_jugador">ELIMINAR JUGADOR</string>
    <string name="id_jugador">ID Jugador:</string>
    <string name="eliminar_liga">ELIMINAR LIGA</string>
    <string name="modificar_jugador">MODIFICAR JUGADOR</string>
    <string name="eliminar_equipo">ELIMINAR EQUIPO</string>
    <string name="equipos_titulo">EQUIPOS</string>
    <string name="modificar_equipo">MODIFICAR EQUIPO</string>
    <string name="modificar_liga">MODIFICAR LIGA</string>
</resources>