<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".admin.ligas.LigasAdministrador">

    <Button
        android:id="@+id/btAnadirLiga"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToAdd"
        android:text="@string/a_adir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloLigasAdministrador" />

    <Button
        android:id="@+id/btEliminarLiga"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToDelete"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btModificarLiga" />

    <Button
        android:id="@+id/btModificarLiga"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToUpdate"
        android:text="@string/modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnadirLiga" />

    <TextView
        android:id="@+id/tvTituloLigasAdministrador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        android:text="@string/ligasTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>