<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".admin.equipos.MenuEquiposAdministrador">

    <TextView
        android:id="@+id/tvTituloMenuEquiposAdministrador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="60dp"
        android:text="@string/equipos_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAnadirEquipoMenuEquiposAdmin"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToAdd"
        android:text="@string/a_adir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloMenuEquiposAdministrador" />

    <Button
        android:id="@+id/btModificarEquipoMenuEquiposAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToUpdate"
        android:text="@string/modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnadirEquipoMenuEquiposAdmin" />

    <Button
        android:id="@+id/btEliminarEquipoMenuEquiposAdmin"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="#3F51B5"
        android:onClick="goToDelete"
        android:text="@string/eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btModificarEquipoMenuEquiposAdmin"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>