<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".admin.jugadores.AnadirJugador">

    <TextView
        android:id="@+id/tvTituloAnadirJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:text="@string/anadir_jugador_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="411dp"
        android:layout_height="607dp"
        android:layout_marginTop="21dp"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensajeAnadirJugador">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNombreAñadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreFormulario"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvApellidoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etApellidoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFechaNacimientoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFechaNacimientoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDorsalAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dorsal_formulario"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDorsalAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNacionalidadAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nacionalidad"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNacionalidadAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPosicionAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posicion_formulario"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPosicionAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvValorMercadoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_mercado"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etValorMercadoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIdEquipoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_equipo"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etIdEquipoAnadirJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btAnadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="createPlayerInTeam"
                android:text="@string/a_adir" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvMensajeAnadirJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="98dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>