<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".admin.equipos.ModificarEquipo">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="37dp"
        android:text="@string/modificar_equipo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout5"
        android:layout_width="411dp"
        android:layout_height="294dp"
        android:layout_marginTop="33dp"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_equipo"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etIdEquipoModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreFormulario"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etNombreEquipoModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estadio"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etEstadioModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuacion"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etPuntuacionModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btModificarEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="updateTeam"
                android:text="@string/modificar" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvMensajeModificarEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="13dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>