<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".admin.ligas.ModificarLiga">

    <TextView
        android:id="@+id/tvTituloModificarLiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="38dp"
        android:text="@string/modificar_liga"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout6"
        android:layout_width="409dp"
        android:layout_height="250dp"
        android:layout_marginTop="13dp"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloModificarLiga">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIdLigaModificarLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_liga"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etIdLigaModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNombreLigaModificarLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreFormulario"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreModificarLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPaisLigaModificarLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPaisModificarLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btModificaLiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="updateLeague"
                android:text="@string/modificar" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvMensajeModificarLiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout6" />
</androidx.constraintlayout.widget.ConstraintLayout>